desafios/tipsbank/k8s/semana4/41-kyverno-validate-no-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds: [Pod]
      validate:
        message: "Toda imagem precisa de uma tag explicita (nao pode ser :latest e nao pode estar sem tag)."
        pattern:
          spec:
            containers:
              - name: "*"
                image: "!*:latest & *:*"
