desafios/tipsbank/k8s/semana4/42-kyverno-validate-require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-labels-app-team-env
      match:
        any:
          - resources:
              kinds: [Deployment, StatefulSet, DaemonSet]
      validate:
        message: "Workloads precisam das labels: app, team, env."
        pattern:
          metadata:
            labels:
              app: "?*"
              team: "?*"
              env: "?*"
